--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <a href="#" class="banner banner03">
                     <img src="imgs/banner01.png" alt="Banner 3">
                 </a>
+
             </div>
             <div class="controles-banners">
                 <button class="prev" onclick="moveSlide(-1)"><i class="fa-solid fa-chevron-left"></i></button>
@@ -142,6 +143,43 @@
         <div class="bannerMobile">
             <img src="imgs/banner01-mobile.png" alt="Banner 3">
         </div>
+
+        <section class="bannerDuplo bannerSneakersDesktop">
+            <div class="imagens-bannerDuplo">
+                <a href="#" class="banner banner01">
+                    <img src="imgs/sneakersShop-banner.png" alt="sneakers Shop Banner">
+                </a>
+            </div>
+            <div class="imagens-bannerDuplo">
+                <img src="imgs/shopnow-banner.png" alt="shopNow banner">
+            </div>
+        </section>
+        <section class="bannerDuplo bannerSneakersMobile">
+            <div class="imagens-bannerDuplo">
+                <img src="imgs/shopnow-banner.png" alt="shopNow banner">
+            </div>
+            <div class="imagens-bannerDuplo">
+                <a href="#" class="banner banner01">
+                    <img src="imgs/sneakersShop-bannerMobile.png" alt="sneakers Shop Banner">
+                </a>
+            </div>
+        </section>
+
+        <section class="bannerDuplo BannerMcDaniel">
+            <div class="imagens-bannerDuplo">
+                <img src="imgs/mcDanielBanner.png" alt="Mc Daniel Banner">
+            </div>
+            <div class="imagens-bannerDuplo imagemDesktop-bannerDuplo">
+                <a href="#" class="banner banner01">
+                    <img src="imgs/collabMcDanielBanner.png" alt="collabMcDanielBanner">
+                </a>
+            </div>
+            <div class="imagens-bannerDuplo imagemMobile-bannerDuplo ">
+                <a href="#" class="banner banner01">
+                    <img src="imgs/collabMcDanielBannerMobile.png" alt="collabMcDanielBanner">
+                </a>
+            </div>
+        </section>
     </main>
     <script src="script.js"></script>
     <footer>
@@ -170,7 +208,7 @@
                 <input type="submit" value="Assinar" id="submitNewsletter">
             </form>
         </div>
-        <div class="informacoes">
+        <div class="informacoes-desktop">
             <div class="blocos bloco01">
                 <h4>Fale Conosco</h4>
                 <p>Whatsapp (11) 93447-8717</p>
@@ -225,11 +263,15 @@
                 <img src="imgs/icon-instagram.png" alt="Icon Footer" id="iconInsta">
             </div>
         </div>
+        <div class="informacoes-mobile">
+            <div class="formasPagamento"></div>
+        </div>
         <div class="final">
             <p>© 2023 - TATUAPÉ CONCEITO COMERCIO DE ROUPAS E ACESSORIOS LTDA CNPJ: 17.521.536/0001-55</p>
             <img src="imgs/logoConvertr.png" alt="Logo Convertr">
         </div>
     </footer>
+
 </body>
 
 </html>
