--- a/index.html
+++ b/index.html
@@ -264,7 +264,40 @@
             </div>
         </div>
         <div class="informacoes-mobile">
-            <div class="formasPagamento"></div>
+            <div class="menu-expansivel">
+                <div class="menu-item" onclick="toggleMenu(this)">
+                    <h3>FALE CONOSCO <span class="arrow">menu-expansivel</span></h3>
+                    <div class="content">
+                        <p>Aqui está o conteúdo da seção Fale Conosco.</p>
+                    </div>
+                </div>
+                <div class="menu-item" onclick="toggleMenu(this)">
+                    <h3>SOBRE <span class="arrow">&#9662;</span></h3>
+                    <div class="content">
+                        <p>Conteúdo informativo sobre a empresa.</p>
+                    </div>
+                </div>
+                <div class="menu-item" onclick="toggleMenu(this)">
+                    <h3>MEUS DADOS <span class="arrow">&#9662;</span></h3>
+                    <div class="content">
+                        <p>Aqui você pode visualizar e editar seus dados pessoais.</p>
+                    </div>
+                </div>
+                <div class="menu-item" onclick="toggleMenu(this)">
+                    <h3>POLÍTICAS <span class="arrow">&#9662;</span></h3>
+                    <div class="content">
+                        <p>Veja as políticas de privacidade e de uso do site.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="formasPagamento">
+                <p>Formas de pagamento</p>
+                <img src="imgs/formasPagamentoMobile.png" alt="Formas de Pagamento" width="220px">
+            </div>
+            <div class="siteSeguro">
+                <p>Site Seguro</p>
+                <img src="imgs/siteSeguroMobile.png" alt="Site Seguro" width="290px">
+            </div>
         </div>
         <div class="final">
             <p>© 2023 - TATUAPÉ CONCEITO COMERCIO DE ROUPAS E ACESSORIOS LTDA CNPJ: 17.521.536/0001-55</p>
