--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 
             </div>
             <div class="controles-banners">
-                <button class="prev" onclick="moveSlide(-1)"><i class="fa-solid fa-chevron-left"></i></button>
-                <button class="next" onclick="moveSlide(1)"><i class="fa-solid fa-chevron-right"></i></button>
+                <button class="prev" onclick=""><i class="fa-solid fa-chevron-left"></i></button>
+                <button class="next" onclick=""><i class="fa-solid fa-chevron-right"></i></button>
             </div>
             <div class="linhas">
-                <span class="linha" onclick="goToSlide(0)"></span>
-                <span class="linha" onclick="goToSlide(1)"></span>
-                <span class="linha" onclick="goToSlide(2)"></span>
+                <span class="linha" onclick=""></span>
+                <span class="linha" onclick=""></span>
+                <span class="linha" onclick=""></span>
             </div>
         </div>
         <div class="bannerMobile">
