--- a/index.html
+++ b/index.html
@@ -266,27 +266,40 @@
         <div class="informacoes-mobile">
             <div class="menu-expansivel">
                 <div class="menu-item" onclick="toggleMenu(this)">
-                    <h3>FALE CONOSCO <span class="arrow">menu-expansivel</span></h3>
-                    <div class="content">
-                        <p>Aqui está o conteúdo da seção Fale Conosco.</p>
+                    <div class="titulo-menu-item">
+                        <h3>Fale conosco</h3>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+    
+                    <div class="conteudo-menu-item">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="menu-item" onclick="toggleMenu(this)">
-                    <h3>SOBRE <span class="arrow">&#9662;</span></h3>
-                    <div class="content">
-                        <p>Conteúdo informativo sobre a empresa.</p>
+                    <div class="titulo-menu-item">
+                        <h3>Sobre</h3>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="conteudo-menu-item">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="menu-item" onclick="toggleMenu(this)">
-                    <h3>MEUS DADOS <span class="arrow">&#9662;</span></h3>
-                    <div class="content">
-                        <p>Aqui você pode visualizar e editar seus dados pessoais.</p>
+                    <div class="titulo-menu-item">
+                        <h3>Meus Dados</h3>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="conteudo-menu-item">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="menu-item" onclick="toggleMenu(this)">
-                    <h3>POLÍTICAS <span class="arrow">&#9662;</span></h3>
-                    <div class="content">
-                        <p>Veja as políticas de privacidade e de uso do site.</p>
+                    <div class="titulo-menu-item">
+                        <h3>Políticas</h3>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="conteudo-menu-item">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
             </div>
