--- a/index.html
+++ b/index.html
@@ -143,7 +143,33 @@
         <div class="bannerMobile">
             <img src="imgs/banner01-mobile.png" alt="Banner 3">
         </div>
+        <section class="categorias">
+            <div class="tituloCategorias">
+                <h2>Compre por categorias</h2>
+                <div class="controlesCategorias">
+                    <i class="fa-solid fa-chevron-left"></i>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </div>
+            <div clas="linhaCategorias">
+                <div class="categoria">
+                    <img src="imgs/categoria-roupas.png" alt="Banner 3">
+                    <a><label>Roupas</label></a>
+                </div>
+                <div class="categoria">
+                    <img src="imgs/categoria-perfumes.png" alt="Banner 3">
+                    <a><label>Perfumes</label></a>
+                </div>
+                <div class="categoria">
+                    <img src="imgs/catoria-sapatos.png" alt="Banner 3">
+                    <a><label>Calçados</label></a>
+                </div>
 
+            </div>
+        </section>
+        <section class="bannerMarcas">
+            <img src="imgs/bannerMarcas.png" alt="Banner Marcas">
+        </section>
         <section class="bannerDuplo bannerSneakersDesktop">
             <div class="imagens-bannerDuplo">
                 <a href="#" class="banner banner01">
@@ -163,6 +189,13 @@
                     <img src="imgs/sneakersShop-bannerMobile.png" alt="sneakers Shop Banner">
                 </a>
             </div>
+        </section>
+        <section class="bannerLacosteDesktop">
+            <img src="imgs/bannerLacoste.png" alt="Banner 3">
+        </section>
+        <section class="bannerLacosteMobile">
+            <img src="imgs/bannerLacoste-mobile.png" alt="Banner 3">
+            <img src="imgs/bannerLacoste-tenis-mobile.png" alt="Banner 3">
         </section>
 
         <section class="bannerDuplo BannerMcDaniel">
@@ -270,9 +303,10 @@
                         <h3>Fale conosco</h3>
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
-    
+
                     <div class="conteudo-menu-item">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="menu-item" onclick="toggleMenu(this)">
@@ -281,7 +315,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="conteudo-menu-item">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="menu-item" onclick="toggleMenu(this)">
@@ -290,7 +325,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="conteudo-menu-item">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="menu-item" onclick="toggleMenu(this)">
@@ -299,7 +335,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="conteudo-menu-item">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.</p>
                     </div>
                 </div>
             </div>
