--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <i class="fa-solid fa-chevron-right"></i>
                 </div>
             </div>
-            <div clas="linhaCategorias">
+            <div class="linhaCategorias">
                 <div class="categoria">
                     <img src="imgs/categoria-roupas.png" alt="Banner 3">
                     <a><label>Roupas</label></a>
@@ -164,7 +164,6 @@
                     <img src="imgs/catoria-sapatos.png" alt="Banner 3">
                     <a><label>Calçados</label></a>
                 </div>
-
             </div>
         </section>
         <section class="bannerMarcas">
